# for_tests

./: CMakeLists.txt  README.md
.github/workflows/: ci-cmake-tests.yml  ci-cpp-style-check.yml
test_class/: CMakeLists.txt
test_class/task_my_class/: my_class.h  tests_for_my_class.cpp
